--- a/src/main/resources/templates/boardCreate.html
+++ b/src/main/resources/templates/boardCreate.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create New Board</title>
+    <title>게시판 생성</title>
 </head>
 <body>
-<h1>Create New Board</h1>
+<h1>게시판 만들기</h1>
 <form action="/boards/create" method="post" th:object="${board}">
-    <label>Title: <input type="text" th:field="*{boardTitle}" /></label><br/>
-    <label>Content: <textarea th:field="*{content}"></textarea></label><br/>
-    <button type="submit">Submit</button>
+    제목: <input type="text" th:field="*{boardTitle}"><br>
+    설명: <textarea th:field="*{content}"></textarea><br>
+    <input type="submit" value="Submit">
 </form>
 </body>
 </html>
