--- a/src/main/resources/templates/boardEdit.html
+++ b/src/main/resources/templates/boardEdit.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Edit Board</title>
+  <title>게시판 수정</title>
 </head>
 <body>
-<h1>Edit Board</h1>
-<form action="/boards/${board.id}/edit" method="post" th:object="${board}">
-  <input type="hidden" th:field="*{boardId}" />
-  <label>Title: <input type="text" th:field="*{boardTitle}" /></label><br/>
-  <label>Content: <textarea th:field="*{content}"></textarea></label><br/>
-  <button type="submit">Submit</button>
+<h1>게시판 수정</h1>
+<form action="/boards/{id}/edit(id=${board.boardId})" method="post" th:object="${board}">
+  <input type="hidden" th:field="*{boardId}">
+  제목: <input type="text" th:field="*{boardTitle}"><br>
+  설명: <textarea th:field="*{content}"></textarea><br>
+  <input type="submit" value="Submit">
 </form>
-<a th:href="@{/boards/{id}(id=${board.boardId})}">Cancel</a>
 </body>
 </html>
