Feat&Fix: BoardDTO작업, 엔티티 Column명 초기화, 엘리스 html 스켈레톤 코드 추가

--- a/src/main/resources/templates/boardList.html
+++ b/src/main/resources/templates/boardList.html
@@ -16,12 +16,12 @@
     </thead>
     <tbody>
     <tr th:each="board : ${boards}">
-        <td th:text="${board.boardId}"></td>
+        <td th:text="${board.id}"></td>
         <td th:text="${board.boardTitle}"></td>
         <td>
-            <a th:href="@{/boards/{id}(id=${board.boardId})}">Detail</a>
-            <a th:href="@{/boards/{id}/edit(id=${board.boardId})}">Edit</a>
-            <a th:href="@{/boards/{id}/delete(id=${board.boardId})}" onclick="return confirm('정말로?')">Delete</a>
+            <a th:href="@{/boards/{id}(id=${board.id})}">Detail</a>
+            <a th:href="@{/boards/{id}/edit(id=${board.id})}">Edit</a>
+            <a th:href="@{/boards/{id}/delete(id=${board.id})}" onclick="return confirm('정말로?')">Delete</a>
         </td>
     </tr>
     </tbody>
