--- a/src/main/resources/templates/boardDetail.html
+++ b/src/main/resources/templates/boardDetail.html
@@ -7,12 +7,12 @@
 <body>
 <h1>게시판 상세정보</h1>
 <div>
-  <p>ID: <span th:text="${board.boardId}"></span></p>
+  <p>ID: <span th:text="${board.id}"></span></p>
   <p>Title: <span th:text="${board.boardTitle}"></span></p>
   <p>Content: <span th:text="${board.content}"></span></p>
 </div>
 <br>
-<form th:action="@{/boards/{id}/delete(id=${board.boardId})}" method="post" id="deleteForm">
+<form th:action="@{/boards/{id}/delete(id=${board.id})}" method="post" id="deleteForm">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete">
 </form>
