--- a/src/main/resources/templates/boardEdit.html
+++ b/src/main/resources/templates/boardEdit.html
@@ -7,7 +7,7 @@
 <body>
 <h1>게시판 수정</h1>
 <form action="/boards/{id}/edit(id=${board.boardId})" method="post" th:object="${board}">
-  <input type="hidden" th:field="*{boardId}">
+  <input type="hidden" th:field="*{id}">
   제목: <input type="text" th:field="*{boardTitle}"><br>
   설명: <textarea th:field="*{content}"></textarea><br>
   <input type="submit" value="Submit">
