--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -26,7 +26,7 @@
       <div class="header mb-5">
         <h1 class="text-center">게시판 추가</h1>
       </div>
-      <form th:action="@{/boards/create}" method="post" th:object="${board}">
+      <form th:action="@{/boards/create}" method="post" th:object="${boardRequestDTO}">
         <div class="mb-3">
           <label for="name">게시판 이름</label>
           <input
