Feat&Fix: Post도메인 FileService 생성, 엔티티 수정

--- a/src/main/resources/templates/post/editPost.html
+++ b/src/main/resources/templates/post/editPost.html
@@ -29,6 +29,7 @@
       <form
         th:action="@{/posts/{postId}/edit(postId=${post.id})}"
         method="post"
+        enctype="multipart/form-data"
       >
         <div class="mb-3">
           <label for="title">게시글 제목</label>
@@ -52,6 +53,10 @@
             placeholder="내용 입력"
             th:text="${post.content}"
           ></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="file">이미지 업로드</label>
+          <input type="file" class="form-control" id="file" name="file"/>
         </div>
         <button type="submit" class="btn btn-primary">수정</button>
         <button
