--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -26,7 +26,7 @@
       <div class="header mb-5">
         <h1 class="text-center">게시판 추가</h1>
       </div>
-      <form th:action="@{/boards/create}" method="post" th:object="${boardRequestDTO}">
+      <form th:action="@{/boards/create}" method="post" th:object="${boardRequestDTO}" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="name">게시판 이름</label>
           <input
@@ -50,6 +50,10 @@
             placeholder="게시판 설명 입력 (최대 200자)"
             th:field="*{content}"
           ></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="file">이미지 업로드</label>
+          <input type="file" class="form-control" id="file" name="file"/>
         </div>
         <button type="submit" class="btn btn-primary">게시판 추가</button>
         <button
