Fix: html 파라미터 수정

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -71,8 +71,8 @@
               >
                 <img
                   class="img-thumbnail w-50 h-50 me-3"
-                  src="hellobit.png"
-                  alt="hellobit"
+                  th:src="@{/files/{filepath}(filepath=${board.filename})}"
+                  th:alt="${board.filename}"
                 />
                 <div>
                   <h4
