Fix: 이미지가 없거나 깨지면 Default이미지가 나오도록 수정

--- a/src/main/resources/templates/board/boards.html
+++ b/src/main/resources/templates/board/boards.html
@@ -72,6 +72,7 @@
                 <img
                   class="img-thumbnail w-50 h-50 me-3"
                   th:src="@{/files/{filepath}(filepath=${board.filename})}"
+                  onerror="this.src='hellobit.png'"
                   th:alt="${board.filename}"
                 />
                 <div>
