--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -55,6 +55,17 @@
           <label for="file">이미지 업로드</label>
           <input type="file" class="form-control" id="file" name="file"/>
         </div>
+        <div class="mb-3">
+          <label for="userId">작성자 ID</label>
+          <input
+                  class="form-control"
+                  id="userId"
+                  name="userId"
+                  maxlength="200"
+                  placeholder="ID 입력"
+                  th:field="*{userId}"
+          />
+        </div>
         <button type="submit" class="btn btn-primary">게시판 추가</button>
         <button
           type="button"
