--- a/src/main/resources/templates/board/editBoard.html
+++ b/src/main/resources/templates/board/editBoard.html
@@ -36,6 +36,28 @@
       <label for="file">이미지 업로드</label>
       <input type="file" class="form-control" id="file" name="file"/>
     </div>
+    <div class="mb-3">
+      <label for="userId">작성자 ID</label>
+      <input
+              class="form-control"
+              id="userId"
+              name="userId"
+              maxlength="200"
+              placeholder="ID 입력"
+              th:field="*{boardResponseDTO.userId}"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password">작성자 비밀번호</label>
+      <input
+              class="form-control"
+              id="password"
+              name="password"
+              maxlength="200"
+              placeholder="비밀번호 입력"
+              th:field="*{boardResponseDTO.password}"
+      />
+    </div>
     <button type="submit" class="btn btn-primary">게시판 수정</button>
     <button type="button" class="btn btn-secondary" onclick="window.history.back();">취소</button>
   </form>
