Feat: Comment 생성 시 유저 정보 주입

--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -111,6 +111,17 @@
           method="POST"
         >
           <div class="input-group">
+            <div class="mb-3">
+              <label for="userId">작성자 ID</label>
+              <input
+                      class="form-control"
+                      id="userId"
+                      name="userId"
+                      maxlength="200"
+                      placeholder="ID 입력"
+                      required
+              />
+            </div>
             <textarea
               class="form-control"
               name="content"
