Refactor: Comment 수정을 위한 html 리팩토링

--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -287,6 +287,27 @@
             <h1 class="modal-title fs-5" id="deleteCommentModalLabel">
               댓글을 삭제하시겠습니까?
             </h1>
+            <div class="mb-3">
+              <label for="userId">작성자 ID</label>
+              <input
+                      class="form-control"
+                      id="userId"
+                      name="userId"
+                      maxlength="200"
+                      placeholder="ID 입력"
+                      required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="password">작성자 비밀번호</label>
+              <input
+                      class="form-control"
+                      id="password"
+                      name="password"
+                      maxlength="200"
+                      placeholder="비밀번호 입력"
+                      required
+              />
             <button
               type="button"
               class="btn-close"
