--- a/src/main/resources/templates/post/createPost.html
+++ b/src/main/resources/templates/post/createPost.html
@@ -19,33 +19,33 @@
         font-family: "Elice DX Neolli", sans-serif;
       }
     </style>
-    <title>게시글 추가</title>
+    <title>음식 레시피 추가</title>
   </head>
   <body>
     <div class="container my-5">
       <div class="header mb-5">
-        <h1 class="text-center">게시글 추가</h1>
+        <h1 class="text-center">음식 레시피 추가</h1>
       </div>
       <form th:action="@{/posts/create(boardId=${boardId})}" method="post" enctype="multipart/form-data">
         <div class="mb-3">
-          <label for="title">게시글 제목</label>
+          <label for="title">음식 이름</label>
           <input
             type="text"
             class="form-control"
             id="title"
             name="title"
             maxlength="30"
-            placeholder="게시글 제목 입력 (최대 30자)"
+            placeholder="음식 이름 입력 (최대 30자)"
             required
           />
         </div>
         <div class="mb-3">
-          <label for="content">내용</label>
+          <label for="content">레시피</label>
           <textarea
             class="form-control"
             id="content"
             name="content"
-            placeholder="내용 입력"
+            placeholder="레시피 입력"
           ></textarea>
         </div>
         <div class="mb-3">
